deployment/existing/auth_oidc/authservice.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: authservice
  namespace: istio-system
spec:
  type: ClusterIP
  selector:
    app: authservice
  ports:
  - port: 8080
    name: http-authservice
    targetPort: http-api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authservice
  namespace: istio-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authservice
  strategy:
    type: RollingUpdate
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "false"
      labels:
        app: authservice
    spec:
      volumes:
        - name: custom-ca
          secret:
            secretName: istio-ingressgateway-certs
            items:
              - key: tls.crt
                path: tls.crt
      containers:
      - name: authservice
        image: gcr.io/arrikto/kubeflow/oidc-authservice:v0.2
        imagePullPolicy: Always
        ports:
        - name: http-api
          containerPort: 8080
        volumeMounts:
          - name: custom-ca
            mountPath: /etc/custom-ca
            readOnly: true
